@@ -80,6 +80,10 @@ public class UriResolver extends HttpServlet {
 	private final SparqlDispatcher sparqlDispatcher = new SparqlDispatcher(ontGraph);
 	
 	private final HtmlDispatcher htmlDispatcher = new HtmlDispatcher(ontConfig, db);
+	
+	private final ImageDispatcher imgDispatcher = new ImageDispatcher(ontConfig, db);
+	
+	private final RegularFileDispatcher regularFileDispatcher = new RegularFileDispatcher();
 
 	
 	private enum OntFormat { RDFXML, N3 };
@@ -231,107 +235,8 @@ public class UriResolver extends HttpServlet {
 		}
 		
 		// Else, try to resolve the requested resource.
-		_resolveRegularResource(request, response);
+		regularFileDispatcher.dispatch(getServletContext(), request, response);
 	}
-
-	/**
-	 * Helper method to dispatch the request for a regular resource.
-	 * Note: since <code>&lt;url-pattern>/*&lt;/url-pattern></code> is used in web.xml, *everything* 
-	 * gets dispatched through this servlet, so, besides ontologies and terms, other possible resources
-	 * should be resolved by this servlet.
-	 */
-	private void _resolveRegularResource(HttpServletRequest request, HttpServletResponse response) 
-	throws ServletException, IOException {
-		final String requestedUri = request.getRequestURI();
-		final String contextPath = request.getContextPath();
-
-		// first, check if it is the "root" request, for example, in the mmisw.org deployment
-		// with "ont" as the context, the root request is basically:
-		//    http://mmisw.org/ont    or   http://mmisw.org/ont/
-		// The "root" request is recognized when the requestedUri without any trailing
-		// slashes is equal to the contextPath. For the 2nd request above, we have:
-		//       request.getRequestURI()         = /ont/
-		//       request.getContextPath()        = /ont
-		if ( requestedUri.replaceAll("/*$", "").equals(contextPath) ) {
-			// this is a "root" request. respond with information about this service:
-			_showServiceInfo(request, response);
-			return;
-		}
-
-
-		String path = request.getPathTranslated();
-		File file = new File(path);
-		if ( !file.canRead() || file.isDirectory() ) {
-			if ( log.isDebugEnabled() ) {
-				log.debug("Other resource: " +path+ ": not found or cannot be read");
-			}
-			response.sendError(HttpServletResponse.SC_NOT_FOUND, request.getRequestURI());
-			return;
-		}
-
-		String mime = getServletContext().getMimeType(path);
-		if ( mime != null ) {
-			response.setContentType(mime);
-		}
-
-		FileInputStream is = new FileInputStream(file);
-		ServletOutputStream os = response.getOutputStream();
-		IOUtils.copy(is, os);
-		os.close();
-	}
-	
-	/**
-	 * Helper method to dispatch a "root" request.
-	 * The dispatch is always completed here.
-	 */
-	private void _showServiceInfo(HttpServletRequest request, HttpServletResponse response) 
-	throws ServletException, IOException {
-		
-		if ( log.isDebugEnabled() ) {
-			log.debug("_showServiceInfo: starting response.");
-		}
-		
-		String contextPath = request.getContextPath();
-		PrintWriter out = null; 
-		
-		// start the response page:
-		response.setContentType("text/html");
-		out = response.getWriter();
-		out.println("<html>");
-		out.println("<head>");
-		out.println("<title>" +FULL_TITLE+ "</title>");
-		out.println("<link rel=stylesheet href=\"" +contextPath + "/main.css\" type=\"text/css\">");
-		out.println("</head>");
-		out.println("<body>");
-		out.println("<br/>");
-		out.println(
-				"<div align=\"center\">" +
-				"<table>" +
-				"<tr valign=\"center\">" +
-				"<td align=\"center\">" +
-				"<a href=\"http://marinemetadata.org/semanticframework\">" +
-				"<img src=\"" +contextPath + "/img/" +"semantic_framework.jpg" + "\" border=\"0\"" +
-						"alt=\"MMI Semantic Framework\"/>" +
-				"</a>" +
-				"<br/>" +
-				"<br/>" +
-				"<b>" +TITLE+ "</b>" +
-				"</br>This service is part of the " +
-				"<a href=\"http://marinemetadata.org/semanticframework\">" +
-				"MMI Semantic Framework</a>" +
-				"<br/>" +
-				"<br/>" +
-				"<font color=\"gray\" size=\"-2\">" +FULL_TITLE+ "</font>" +
-				"</td>" +
-				"</tr>" +
-				"</table>" +
-				"</div>"
-		);
-		
-		out.println("</body>");
-		out.println("</html>");
-	}
-	
 
 	/**
 	 * Resolves the ontology identified by its URI as indicated by <code>request.getRequestURL()</code>.
@@ -492,6 +397,13 @@ public class UriResolver extends HttpServlet {
 
 		// OK, from here I use 'outFormat' to check the requested format for the response.
 		// 'extension' not used from here any more.
+		
+		
+		// dispatch some image format here (note: the whole dispatch sequence is to be re-designed,
+		// so this will surely change)
+		if ( outFormat.equalsIgnoreCase("dot") ) {
+			return imgDispatcher.dispatch(request, response, mmiUri, unversionedRequest, mostRecentOntology);
+		}
 		
 		if ( outFormat.length() == 0                 // No explicit outFormat 
 		||   outFormat.equalsIgnoreCase("owl")       // OR outFormat is "owl"
